set conn color to default to white and set fixed color to be more visible on dark background

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -5,7 +5,7 @@
 @stroke-color: @gray;
 @selected-color: #74DDFC;
 @selected-nodetext-color: white;
-@fixed-color: #555;
+@fixed-color: @orange;
 @text-color: #333;
 @data-tooltip-color: rgba(0,31,63,0.8);
 @controls-z-index: 1;
